Update metaverse conference

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -159,8 +159,13 @@ title: IEEE MVS 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Session Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Peter Ng <br /></h5>
-              <h5 class="fs-6">Shravan Kumar<br /></h5>
+              <h5 class="fs-6">
+                Peter Ng <br />The Hong Kong Polytechnic University, China
+              </h5>
+              <h5 class="fs-6">
+                Shravan Kumar<br />
+                BITS Pilani, India, and University of Oslo, Norway
+              </h5>
               <h5 class="fs-6">
                 Azza Basiouni <br />
                 Liwa College, UAE
