--- a/keynotes/shauna-zenteno/index.html
+++ b/keynotes/shauna-zenteno/index.html
@@ -93,7 +93,7 @@ title: Keynotes - Dr. Shauna Zenteno
         <h4>Biography</h4>
         <p>
           Dr. Shauna Reckseidler-Zenteno is the Dean of the Faculty of Science
-          and Technology at Athabasca University since 2020. She previously
+          and Technology at Athabasca University since 2020. She is a Full Professor of Biology. She previously
           served as the Vice Dean, Operations in the Faculty of Graduate Studies
           at Athabasca University. As an academic and administrator, she has
           designed and taught several courses in biology and microbiology,
