pdated industry speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -1435,11 +1435,11 @@ title: Industry Day
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
       <div class="text-center">
-        <!-- <img
-          src=""
+        <img
+          src="/assets/images/Andrea_Urbina.JPG"
           alt="Andrea Urbina"
           class="circle-img mb-3"
-        /> -->
+        />
         <h4>Andrea Urbina</h4>
         <h6><i>Chief Executive Officer</i></h6>
         <h6>
@@ -1453,7 +1453,64 @@ title: Industry Day
     </div>
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
-      <p class="fw-normal">Coming soon</p>
+      <p class="fw-normal">
+        Andrea Urbina is a strategic leader with a decade of experience spanning
+        operations, communications, and program development across the
+        non-profit, post-secondary, and healthcare sectors. As CEO of ELIXR
+        Simulations, Andrea has led the organization’s growth from a grassroots
+        initiative into a nationally recognized non-profit advancing immersive
+        technology in education and training. <br /><br />
+        Under her leadership, ELIXR has expanded its flagship Protégé Program,
+        creating over 30 paid work-integrated learning opportunities for
+        students and recent graduates entering the extended reality (XR) field.
+        She is passionate about talent development and actively champions
+        initiatives that provide emerging professionals with the mentorship,
+        resources, and industry exposure they need to thrive.
+        <br /><br />
+        Andrea previously helped launch the Peter Lougheed Leadership College
+        alongside the Rt. Hon. Kim Campbell, solidifying her track record in
+        building impactful programs that foster leadership and innovation. At
+        ELIXR, she continues to drive the adoption of immersive technologies
+        while cultivating the next generation of talent shaping the future of
+        work.
+      </p>
+    </div>
+  </div>
+  <!-- Bob Wold -->
+  <div class="row" id="byron-riemann">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/bobwold-headshot-low.png"
+          alt="Bob Wold"
+          class="circle-img mb-3"
+        />
+        <h4>Bob Wold</h4>
+        <h6><i>Chief Executive Officer</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.quantumrings.com/"
+              >Quantum Rings</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p class="fw-normal">
+        Bob Wold is the CEO of Quantum Rings, a company dedicated to making
+        quantum computing accessible for enterprises, today, through their
+        record breaking quantum simulation technology. Bob is a serial
+        entrepreneur and a longtime technology leader with a 25-year track
+        record of bringing emerging technologies to market through award winning
+        products both in the startup ecosystem and within large enterprises.
+        Most recently serving as Vice President of Technology Innovation at
+        Trimble Inc., where he led company-wide innovation and technology
+        strategy.
+      </p>
     </div>
   </div>
   <!-- Byron Riemann -->
@@ -1703,6 +1760,40 @@ title: Industry Day
         reshaping the field. His work helps public institutions navigate
         complexity, scale responsibly, and build enduring, AI-literate teams
         that deliver measurable value.
+      </p>
+    </div>
+  </div>
+  <!-- Greg Dick -->
+  <div class="row" id="girish-limaye">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Greg Headshot JPEG.jpeg"
+          alt="Greg Dick"
+          class="circle-img mb-3"
+        />
+        <h4>Greg Dick</h4>
+        <h6>
+          <i>Chief Executive Officer</i>
+        </h6>
+        <h6>
+          <i
+            ><a href="https://openquantumdesign.org/">Open Quantum Design</a></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Greg is the co-founder and CEO of Open Quantum Design, a nonprofit
+        organization designed to scale quantum computing through radical
+        transparency. Prior to co-founding OQD, Greg was a senior executive at
+        Perimeter Institute for Theoretical Physics. He is also the founder and
+        Principal at RESILIENT, an agency dedicated to helping organizations
+        develop pro-active resiliency through leadership diversity.
       </p>
     </div>
   </div>
@@ -2007,6 +2098,49 @@ title: Industry Day
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
       <p>Coming soon</p>
+    </div>
+  </div>
+  <!-- Lindsay LeBlanc -->
+  <div class="row" id="kyle-mckrindle">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/LindsayMay2025.jpg"
+          alt="Lindsay LeBlanc"
+          class="circle-img mb-3"
+        />
+        <h4>Lindsay LeBlanc</h4>
+        <h6><i>Professor, Dept of Physics</i></h6>
+        <h6>
+          <i
+            ><a
+              target="_blank"
+              href="https://sites.google.com/ualberta.ca/ultracold"
+              >University of Alberta</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Lindsay LeBlanc is an experimental atomic physicist working with
+        ultracold atoms and quantum technologies. Lindsay earned her BSc in
+        Engineering Physics from the University of Alberta in 2003 and her Ph.D.
+        in Physics from the University of Toronto in 2011, after which she
+        joined the Joint Quantum Institute in Maryland in 2013 as a postdoctoral
+        fellow, before returning to join the University of Alberta where she
+        is Professor in Physics and Canada Research Chair in Atomic Quantum
+        Science and Technology. Her research laboratory focuses on fundamental
+        research and practical applications using atomic physics techniques,
+        leveraging the interactions between light and matter. Using precision
+        laser systems, custom electronics, and ultrahigh vacuum systems, the
+        team is engaged in a variety of research topics related to quantum
+        computing, quantum memory, and quantum communications.
+      </p>
     </div>
   </div>
   <!-- Martin Ferguson-Pell  -->
