Updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -19,12 +19,10 @@ title: Women in the Smart World Forum 2025
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-5 fw-bolder mt-5">
-        Women in the Smart World Forum 2025 (Hybrid)
-      </h1>
-      <!-- <h3 class="w-75 responsive-width fw-medium text-center">
-        Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
-      </h3> -->
+      <div>
+        <h3>IEEE Smart World Congress 2025</h3>
+        <h1 class="display-5 fw-bolder mt-3">Women in the Smart World Forum</h1>
+      </div>
       <div>
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">August 20 - 21, 2025</h3>
@@ -32,10 +30,10 @@ title: Women in the Smart World Forum 2025
       <div
         class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
       >
-        <a class="btn btn-primary" href="#wsw-presentations"
+        <a class="btn btn-primary fw-medium" href="#wsw-presentations"
           >Part 1: Presentations
         </a>
-        <a class="btn btn-primary" href="#wsw-panel-discussion"
+        <a class="btn btn-primary fw-medium" href="#wsw-panel-discussion"
           >Part 2: Panel Discussion
         </a>
       </div>
