--- a/panels/ais-transformative-influence-on-higher-education/index.html
+++ b/panels/ais-transformative-influence-on-higher-education/index.html
@@ -20,9 +20,9 @@ title: AI's Transformative Influence on Higher Education
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <div>
-        <h3>IEEE Smart World Congress 2025 Panel</h3>
-        <h1 class="display-5 fw-bolder mt-5">
-          AI's Transformative Influence on Higher Education
+        <h3>IEEE Smart World Congress 2025</h3>
+        <h1 class="display-5 fw-bolder mt-3">
+          AI's Transformative Influence on Higher Education Panel
         </h1>
       </div>
       <div>
