Updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -194,7 +194,7 @@ title: Women in the Smart World Forum 2025
         </p>
       </div>
       <div class="row">
-        <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
+        <div class="col-12 mb-sm-0 d-flex flex-column gap-4">
           <h2 class="fs-2">Discussion Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-12 mb-3 mb-sm-0">
@@ -230,8 +230,21 @@ title: Women in the Smart World Forum 2025
             </div>
           </div>
         </div>
+        <div
+          class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
+        >
+          <a class="btn btn-primary fw-medium w-100" href="#wsw-presentations"
+            >Part 1: Presentations
+          </a>
+          <a
+            class="btn btn-primary fw-medium w-100"
+            href="#wsw-panel-discussion"
+            >Part 2: Panel Discussion
+          </a>
+        </div>
       </div>
-      <div id="submission-guidelines" class="row">
+
+      <div id="submission-guidelines" class="row mt-4">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h2 class="fs-2">Submission Guidelines</h2>
           <p class="fs-5">
@@ -256,14 +269,6 @@ title: Women in the Smart World Forum 2025
             Please note that authors of accepted proposals must register and
             present in person or virtually at the conference.
           </p>
-          <div>
-            <a
-              class="btn btn-primary disabled"
-              href="https://edas.info/N33584"
-              target="_blank"
-              >Submit Proposal to WSW Forum 2025 (Coming soon)</a
-            >
-          </div>
         </div>
       </div>
     </div>
