Updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -31,10 +31,10 @@ title: Women in the Smart World Forum 2025
         class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
       >
         <a class="btn btn-primary fw-medium" href="#wsw-presentations"
-          >Part 1: Presentations
+          >Session 1: Presentations
         </a>
         <a class="btn btn-primary fw-medium" href="#wsw-panel-discussion"
-          >Part 2: Panel Discussion
+          >Session 2: Panel Discussion
         </a>
       </div>
     </div>
@@ -70,12 +70,12 @@ title: Women in the Smart World Forum 2025
           <h6 class="">August 18 - 22, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
-            <a href="#wsw-presentations">Part 1: Presentations</a>
+            <a href="#wsw-presentations">Session 1: Presentations</a>
           </h5>
           <h6 class="">August 20, 1:00pm - 2:30pm</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
-            <a href="#wsw-panel-discussion">Part 2: Panel Discussion</a>
+            <a href="#wsw-panel-discussion">Session 2: Panel Discussion</a>
           </h5>
           <h6 class="">August 21, 2:15pm - 3:30 pm</h6>
           <hr class="w-100" />
@@ -233,13 +233,13 @@ title: Women in the Smart World Forum 2025
         <div
           class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
         >
-          <a class="btn btn-primary fw-medium w-100" href="#wsw-presentations"
-            >Part 1: Presentations
+          <a class="btn btn-primary fw-medium w-100" href="#wsw-presentations">
+            Session 1: Presentations
           </a>
           <a
             class="btn btn-primary fw-medium w-100"
             href="#wsw-panel-discussion"
-            >Part 2: Panel Discussion
+            >Session 2: Panel Discussion
           </a>
         </div>
       </div>
@@ -275,7 +275,7 @@ title: Women in the Smart World Forum 2025
   </div>
 </section>
 
-<!-- Part 1 -->
+<!-- Session 1 -->
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
   id="wsw-presentations"
@@ -286,7 +286,8 @@ title: Women in the Smart World Forum 2025
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
         <h2 class="text-center">
-          Women in a Smart World Part I - Setting the Stage Paper Presentations
+          Women in a Smart World Session I - Setting the Stage Paper
+          Presentations
         </h2>
         <div>
           <h4 class="text-center">
@@ -537,7 +538,7 @@ title: Women in the Smart World Forum 2025
   </div>
 </section>
 
-<!-- Part 2 -->
+<!-- Session 2 -->
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
   id="wsw-panel-discussion"
@@ -548,7 +549,7 @@ title: Women in the Smart World Forum 2025
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
         <h2 class="text-center">
-          Women in a Smart World Part II - Panel Discussion
+          Women in a Smart World Session II - Panel Discussion
         </h2>
         <div>
           <h4 class="text-center">
