Updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -192,6 +192,18 @@ title: Women in the Smart World Forum 2025
           Moreover, this forum also promotes the building of meaningful
           connections and new collaborations amongst participants.
         </p>
+        <div
+          class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100 mt-5 mb-4"
+        >
+          <a class="btn btn-primary fw-medium w-100" href="#wsw-presentations">
+            Session 1: Presentations
+          </a>
+          <a
+            class="btn btn-primary fw-medium w-100"
+            href="#wsw-panel-discussion"
+            >Session 2: Panel Discussion
+          </a>
+        </div>
       </div>
       <div class="row">
         <div class="col-12 mb-sm-0 d-flex flex-column gap-4">
@@ -230,21 +242,9 @@ title: Women in the Smart World Forum 2025
             </div>
           </div>
         </div>
-        <div
-          class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
-        >
-          <a class="btn btn-primary fw-medium w-100" href="#wsw-presentations">
-            Session 1: Presentations
-          </a>
-          <a
-            class="btn btn-primary fw-medium w-100"
-            href="#wsw-panel-discussion"
-            >Session 2: Panel Discussion
-          </a>
-        </div>
       </div>
 
-      <div id="submission-guidelines" class="row mt-4">
+      <div id="submission-guidelines" class="row">
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h2 class="fs-2">Submission Guidelines</h2>
           <p class="fs-5">
