--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -77,7 +77,7 @@ title: Women in the Smart World Forum 2025
           <h5 class="fs-6 fw-bold text-center">
             <a href="#wsw-panel-discussion">Session 2: Panel Discussion</a>
           </h5>
-          <h6 class="">August 21, 2:15pm - 3:30 pm</h6>
+          <h6 class="">August 21, 2:15pm - 3:45 pm</h6>
           <hr class="w-100" />
           <p>
             Please note that the reporter of the first cycle accepted proposals
@@ -366,7 +366,7 @@ title: Women in the Smart World Forum 2025
             class="circle-img mb-3"
           />
           <h5>Dr. Ruhne Huang</h5>
-          <h6><i>Hosei University, China</i></h6>
+          <h6><i>Hosei University, Japan</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
@@ -554,7 +554,7 @@ title: Women in the Smart World Forum 2025
         <div>
           <h4 class="text-center">
             Telus Convention Centre - Macleod Hall B & C <br />
-            Thursday August 21, 2025 <br />2:15pm - 3:30 pm
+            Thursday August 21, 2025 <br />2:15pm - 3:45 pm
           </h4>
         </div>
         <h3>
@@ -788,7 +788,7 @@ title: Women in the Smart World Forum 2025
             class="circle-img mb-3"
           />
           <h5>Dr. Ruhne Huang</h5>
-          <h6><i>Hosei University, China</i></h6>
+          <h6><i>Hosei University, Japan</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
