--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -509,7 +509,7 @@ title: Women in the Smart World Forum 2025
     <!-- Dr. Xiaohua Feng   -->
     <div class="row">
       <div
-        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+        class="col-md-3 col-sm-4 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
       >
         <div class="text-center">
           <img
@@ -540,7 +540,7 @@ title: Women in the Smart World Forum 2025
 
 <!-- Session 2 -->
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-5 pb-5 mt-2 d-flex flex-column gap-4"
   id="wsw-panel-discussion"
 >
   <hr />
