Updated industry day schedule

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -76,9 +76,9 @@ title: Industry Day
 <section class="container-fluid d-flex flex-column gap-4 bg-light p-0">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <h2 class="text-center">Industry Day Schedule</h2>
-    <h3 class="mt-1 mb-2 text-center">Morning Session</h3>
 
-    <!-- Registration -->
+    <!-- Morning session -->
+    <h3 class="mt-1 mb-2 text-center">Morning Session</h3>
     <div
       class="row fs-5 border-1 border-priamry bg-white p-3 border rounded-2 m-0"
     >
@@ -1113,7 +1113,9 @@ title: Industry Day
   </div>
   <!-- Henry Leung -->
   <div class="row" id="henry-leung">
-    <div class="col-12 col-md-3 mb-3 mb-sm-0 d-flex flex-row gap-4">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
       <div class="text-center">
         <img
           src="/assets/images/HenryLeung.jpg"
@@ -1124,7 +1126,7 @@ title: Industry Day
         <h6><i>University of Calgary, Calgary, Canada</i></h6>
       </div>
     </div>
-    <div class="col-12 col-md-9">
+    <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
       <p>
         Henry Leung (Fellow, IEEE) received the Ph.D. degree in electrical and
