updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -394,7 +394,7 @@ title: Women in the Smart World Forum 2025
             class="circle-img mb-3"
           />
           <h5>Dr. Rossitza Marinova</h5>
-          <h6><i>Concordia University, Canada</i></h6>
+          <h6><i>Concordia University of Edmonton, Canada</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
@@ -600,7 +600,7 @@ title: Women in the Smart World Forum 2025
           />
           <h5>Panel Moderator</h5>
           <h5>Dr. Rossitza Marinova</h5>
-          <h6><i>Concordia University, Canada</i></h6>
+          <h6><i>Concordia University of Edmonton, Canada</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
@@ -815,21 +815,22 @@ title: Women in the Smart World Forum 2025
             alt="Tatiana Cardona Sepulveda"
             class="circle-img mb-3"
           />
-          <h5>Tatiana Cardona Sepulveda</h5>
+          <h5>Dr. Tatiana Cardona Sepulveda</h5>
           <h6><i>Saint Louis University, USA</i></h6>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
         <h4>Biography</h4>
         <p>
-          Tatiana Cardona currently serves as an Assistant Professor at Saint
-          Louis University. With prior roles as an Assistant Teaching Professor
-          at Ball State University and a Visiting Professor at Tech. Institute
-          of Monterrey, she's experienced in instructing undergraduates and
-          graduates in Information Systems, Project Management, and Optimization
-          Models. Her academic journey includes a PhD in Systems Engineering
-          from Missouri University of Science and Technology, complemented by a
-          Master's in Engineering Management and Lean Six Sigma certification.
+          Dr. Tatiana Cardona currently serves as an Assistant Professor at
+          Saint Louis University. With prior roles as an Assistant Teaching
+          Professor at Ball State University and a Visiting Professor at Tech.
+          Institute of Monterrey, she's experienced in instructing
+          undergraduates and graduates in Information Systems, Project
+          Management, and Optimization Models. Her academic journey includes a
+          PhD in Systems Engineering from Missouri University of Science and
+          Technology, complemented by a Master's in Engineering Management and
+          Lean Six Sigma certification.
         </p>
       </div>
     </div>
