Update industry day and WSW

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -837,6 +837,46 @@ title: Women in the Smart World Forum 2025
   </div>
 </section>
 
+<section
+  class="page-section container-fluid px-5 pb-5 mt-2 d-flex flex-column gap-4"
+  id="wsw-panel-discussion"
+>
+  <hr />
+
+  <div class="d-flex flex-column gap-4 pt-4">
+    <h3>Chair for Sessions I and II</h3>
+    <div class="row">
+      <div
+        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+      >
+        <div class="text-center">
+          <img
+            src="/assets/images/lisa.jpg"
+            alt="Dr. Rossitza Marinova"
+            class="circle-img mb-3"
+          />
+          <h5>Dr. Lisa Carter</h5>
+          <h6><i>Athabasca University, Canada</i></h6>
+        </div>
+      </div>
+      <div class="col-md-9 col-sm-8">
+        <h4>Biography</h4>
+        <p>
+          Lisa Carter is a Biology faculty member at Athabasca University’s
+          Faculty of Science and Technology. She has held progressive leadership
+          roles, with the most recent as inaugural Dean for two terms. She has
+          led major initiatives such as creating state-of-the-art research and
+          teaching labs, launching an online architecture program, and
+          developing online science courses. Dedicated to advancing STEM
+          outreach, she has also supported faculty and staff growth and
+          champions the fostering of capacity building in rural Alberta
+          communities.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   {% include colocated-conferences.html %}
 </section>
