--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -163,8 +163,8 @@ title: Industry Day
             </p>
             <p class="fs-6 fw-normal">
               by <a href="#byron-riemann">Byron Riemann</a>, COO of Rocky View
-              County, and <a href="#katelyn-petersen">Katelyn Petersen</a>,
-              Chief Experience Officer of RWI Synthetic
+              County, and <a href="#sandeep-kaur">Dr. Sandeep Kaur</a>, Chief
+              Experience Officer of RWI Synthetic
             </p>
           </div>
           <div class="col-3">
@@ -1348,40 +1348,6 @@ title: Industry Day
       </p>
     </div>
   </div>
-  <!-- Katelyn Petersen -->
-  <div class="row" id="katelyn-petersen">
-    <div
-      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-    >
-      <div class="text-center">
-        <img
-          src="/assets/images/Katelyn Petersen headshot.jpg"
-          alt="Katelyn Petersen"
-          class="circle-img mb-3"
-        />
-        <h4>Katelyn Petersen</h4>
-        <h6><i>Chief Experience Officer</i></h6>
-        <h6>
-          <i
-            ><a target="_blank" href="https://rwisynthetics.com/"
-              >RWI Synthetics</a
-            ></i
-          >
-        </h6>
-      </div>
-    </div>
-    <div class="col-md-9 col-sm-8">
-      <h4>Biography</h4>
-      <p>
-        Katelyn Petersen is Chief Experience Officer at RWI Synthetics. Katelyn
-        holds a joint Ph.D. in German Languages, Literatures, and Linguistics
-        from the University of Alberta and the Ludwig Maximilian University of
-        Munich. With a background in international relations, technology
-        development, and higher education, Katelyn enjoys bringing people
-        together to solve interesting and complex challenges.
-      </p>
-    </div>
-  </div>
   <!-- Kelly Brown -->
   <div class="row">
     <div
@@ -1709,6 +1675,43 @@ title: Industry Day
         across North America. With over a decade at Dell, Rob also advises the
         Canadian Senior Leadership team and holds bachelor's and master's
         degrees in computer science, specializing in AI.
+      </p>
+    </div>
+  </div>
+  <!-- Sandeep Kaur -->
+  <div class="row" id="sandeep-kaur">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Sandeep Kaur.jpg"
+          alt="Sandeep Kaur"
+          class="circle-img mb-3"
+        />
+        <h4>Dr. Sandeep Kaur</h4>
+        <h6><i>Director of Synthetic Populations & Modeling</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://rwisynthetics.com/"
+              >RWI Synthetics</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Dr. Sandeep Kaur is the Director of Synthetic Populations & Modeling at
+        RWI Synthetics, specializing in synthetic population modeling and
+        advanced data analytics. She holds a Ph.D. in High Energy Physics from
+        the European Organization for Nuclear Research (CERN), Geneva, and
+        Panjab University, India. With deep expertise in big data analysis, data
+        certification, and large-scale simulation. Dr. Kaur thrives on uniting
+        diverse teams to tackle complex, multidisciplinary challenges. Her work
+        bridges technical innovation with collaborative problem-solving, driving
+        impactful solutions for real-world applications.
       </p>
     </div>
   </div>
