Updated Industry Day Page

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -240,8 +240,8 @@ title: Industry Day
           <div class="col-9">
             <p class="fs-6 fw-bold mb-0">AI Data Center and Infrastructure</p>
             <p class="fs-6 fw-normal">
-              by <a href="#">Marc Kronewitt</a>, Executive Officer of Business
-              Development for Denvr Dataworks
+              by <a href="#marc-kronewitt">Marc Kronewitt</a>, Executive Officer
+              of Business Development for Denvr Dataworks
             </p>
           </div>
           <div class="col-3">
@@ -445,7 +445,8 @@ title: Industry Day
               Tom Danshin, CTO of Kornak Technologies <br />
               <a href="#andrea-urbina">Andrea Urbina</a>, CEO of ELIXR
               Simulations <br />
-              Colin Adderley, IT Engineer 3, The City of Calgary
+              <a href="#colin-adderley">Colin Adderley</a>, IT Engineer 3, The
+              City of Calgary
             </p>
           </div>
         </div>
@@ -974,6 +975,41 @@ title: Industry Day
       </p>
     </div>
   </div>
+  <!-- Colin Adderley -->
+  <div class="row" id="colin-adderley">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Colin Adderley.jpg"
+          alt="Chris Healy"
+          class="circle-img mb-3"
+        />
+        <h4>Colin Adderley, B.Sc, B.Eng, P.Eng</h4>
+        <h6>
+          <i>Senior Engineer, Emerging Technologies </i>
+        </h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.calgary.ca/home.html"
+              >The City of Calgary</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Colin has over twenty years of experience and has worked in product and
+        service development inside and outside of the City Of Calgary in
+        Telecommunications Engineering, Software Development and Intelligent
+        Transportation Systems. As a team lead, he oversees Industrial Internet
+        Of Things, Telematics and Robotic Process Automaton programs.
+      </p>
+    </div>
+  </div>
   <!-- Diego Magalhaes -->
   <div class="row" id="diego-magalhaes">
     <div
@@ -1372,33 +1408,6 @@ title: Industry Day
       </p>
     </div>
   </div>
-  <!-- Kyle McKrindle -->
-  <div class="row" id="kyle-mckrindle">
-    <div
-      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-    >
-      <div class="text-center">
-        <!-- <img
-          src=""
-          alt="Kyle McKrindle"
-          class="circle-img mb-3"
-        /> -->
-        <h4>Kyle McKrindle</h4>
-        <h6><i>Chief Technical Officer</i></h6>
-        <h6>
-          <i
-            ><a target="_blank" href="https://www.denvrdata.com/"
-              >Denvr Dataworks</a
-            ></i
-          >
-        </h6>
-      </div>
-    </div>
-    <div class="col-md-9 col-sm-8">
-      <h4>Biography</h4>
-      <p>Coming soon</p>
-    </div>
-  </div>
   <!-- Lindsay LeBlanc -->
   <div class="row" id="kyle-mckrindle">
     <div
@@ -1439,6 +1448,41 @@ title: Industry Day
         laser systems, custom electronics, and ultrahigh vacuum systems, the
         team is engaged in a variety of research topics related to quantum
         computing, quantum memory, and quantum communications.
+      </p>
+    </div>
+  </div>
+  <!-- Marc Kronewitt -->
+  <div class="row" id="marc-kronewitt">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Marc Kronewitt.jpg"
+          alt="Marc Kronewitt"
+          class="circle-img mb-3"
+        />
+        <h4>Marc Kronewitt</h4>
+        <h6>
+          <i>Executive Officer - Business Development</i>
+        </h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.denvrdata.com/"
+              >Denvr Dataworks</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Marc is a seasoned entrepreneur and business development leader with
+        over 25 years of experience across telecom, technology, hyperscale
+        cloud, and modular data centers. At Denvr, he leads business development
+        and government engagement initiatives, drawing on his deep expertise in
+        public sector procurement and infrastructure sales.
       </p>
     </div>
   </div>
